--- a/app/templates/html/menu/platebniudaje.html
+++ b/app/templates/html/menu/platebniudaje.html
@@ -1,91 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'html/kategorie.html' %}
+{% block title %}
+Platební údaje
+{% endblock %}
+{% block main %}
+<div class="container">
+    <div class="left-section">
+        <nav>
+            <a href="#">Osobní údaje</a>
+            <a href="#">Objednávky</a>
+            <a href="#">Platební údaje</a>
+            <a href="#">Výběr objednávek</a>
+            <a href="#">Statistika</a>
+            <a href="#">Uživatelé</a>
+        </nav>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/style.css" type="text/css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>PlatebnÍ Údaje</title>
-</head>
-
-<body>
-
-    <header>
-        <div id="logo">
-            <a href="{{url_for('index')}}">
-                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
-            </a>
-        </div>
-        <div id="header_buttons">
-            <button>
-                <div class="column">
-                    <span class="button-text">Napiste nam</span>
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">mail</span>
-                </div>
-            </button>
-            <button>
-                <div class="column">
-                    <span class="button-text">JMENO
-                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">
-                        settings
-                    </span>
-                </div>
-            </button>
-        </div>
-    </header>
-    <main>
-        <div id="categories">
-            <a href="/html/kategorie/ceska.html">Česká kuchyně</a>
-            <a href="/html/kategorie/americka.html">Americká kuchyně</a>
-            <a href="/html/kategorie/asijska.html">Asijská kuchyně</a>
-            <a href="/html/kategorie/vegetarianska.html">Vegetariánská kuchyně</a>
-            <a href="/html/kategorie/streetfood.html">Streetfood</a>
-            <a href="/html/kategorie/turecka.html">Turecká kuchyně</a>
-        </div>
-        <div class="container">
-            <div class="left-section">
-                <nav>
-                    <a href="#">Osobní údaje</a>
-                    <a href="#">Objednávky</a>
-                    <a href="#">Platební údaje</a>
-                    <a href="#">Výběr objednvávek</a>
-                    <a href="#">Statistika</a>
-                    <a href="#">Uzivatele</a>
-                </nav>
+    <div class="right-section">
+        <form>
+            <div class="form-group">
+                <label for="jmeno">Jméno Příjmení:</label>
+                <input type="text" id="jmeno" name="jmeno" required>
+            </div>
+            <div class="form-group">
+                <label for="karta ">Číslo karty:</label>
+                <input type="text" id="karta" name="karta" required>
+            </div>
+            <div class="form-group">
+                <label for="platnost">Platnost:</label>
+                <input type="text" id="platnost" name="platnost" required>
+            </div>
+            <div class="form-group">
+                <label for="cvc">CVC/CCV:</label>
+                <input type="text" id="cvc" name="cvc" required>
             </div>
 
-            <div class="right-section">
-                <form>
-                    <div class="form-group">
-                        <label for="jmeno">Jméno Příjmení:</label>
-                        <input type="text" id="jmeno" name="jmeno" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="karta ">Číslo karty:</label>
-                        <input type="text" id="karta" name="karta" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="platnost">Platnost:</label>
-                        <input type="text" id="platnost" name="platnost" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="cvc">CVC/CCV:</label>
-                        <input type="text" id="cvc" name="cvc" required>
-                    </div>
-
-                </form>
-                <button type="button">Uložit kartu</button>
-            </div>
-        </div>
-    </main>
-</body>
-
-</html>
+        </form>
+        <button type="button">Uložit kartu</button>
+    </div>
+</div>
+{% endblock %}
