--- a/app/templates/html/menu/uzivatele.html
+++ b/app/templates/html/menu/uzivatele.html
@@ -1,100 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'html/kategorie.html' %}
+{% block title %}
+Statistika
+{% endblock %}
+{% block main %}
+<div class="container">
+    <div class="left-section">
+        <nav>
+            <a href="#">Osobní údaje</a>
+            <a href="#">Objednávky</a>
+            <a href="#">Platební údaje</a>
+            <a href="#">Výběr objednávek</a>
+            <a href="#">Statistika</a>
+            <a href="#">Uživatelé</a>
+        </nav>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../static/css/style.css" type="text/css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Uzivatele</title>
-</head>
-
-<body>
-
-    <header>
-        <div id="logo">
-            <a href="{{url_for('index')}}">
-                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
-            </a>
-        </div>
-        <div id="header_buttons">
-            <button>
-                <div class="column">
-                    <span class="button-text">Napiste nam</span>
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">mail</span>
-                </div>
-            </button>
-            <button>
-                <div class="column">
-                    <span class="button-text">JMENO
-                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">
-                        settings
-                    </span>
-                </div>
-            </button>
-        </div>
-    </header>
-    <main>
-        <div id="categories">
-            <a href="/html/kategorie/ceska.html">Česká kuchyně</a>
-            <a href="/html/kategorie/americka.html">Americká kuchyně</a>
-            <a href="/html/kategorie/asijska.html">Asijská kuchyně</a>
-            <a href="/html/kategorie/vegetarianska.html">Vegetariánská kuchyně</a>
-            <a href="/html/kategorie/streetfood.html">Streetfood</a>
-            <a href="/html/kategorie/turecka.html">Turecká kuchyně</a>
-        </div>
-        <form method="POST" action="{{ url_for('update_role') }}">
-        <div class="container">
-            <div class="left-section">
-                <nav>
-                    <a href="#">Osobní údaje</a>
-                    <a href="#">Objednávky</a>
-                    <a href="#">Platební údaje</a>
-                    <a href="#">Výběr objednvávek</a>
-                    <a href="#">Statistika</a>
-                    <a href="#">Uzivatele</a>
-                </nav>
-            </div>
-
-            <div class="right-section">
-                <h2>Prehled uzivatelu</h2>
-                    <table>
-                        <tr>
-                            <th>ID uzivatele</th>
-                            <th>Prijmeni</th>
-                            <th>Jmeno</th>
-                            <th>Role</th>
-                            <th>Upravit</th>
-                        </tr>
-                        {% for uzivatel in uzivatele %}
-                        <tr>
-                            <td>{{ uzivatel.user_id }}</td>
-                            <td>{{ uzivatel.prijmeni }}</td>
-                            <td>{{ uzivatel.jmeno }}</td>
-                            <td>
-                                <select name="role_select">
-                                    <option value="" {% if not uzivatel.nazev_role %}selected{% endif %}>Vyberte roli</option>
-                                    {% for prvek in role %}
-                                    <option value="{{ prvek.role_id }}" {% if prvek.nazev==uzivatel.nazev_role %}selected{% endif %}>{{ prvek.nazev }}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            <td>
-                                <button type="submit" name="submit_button" value="{{ uzivatel.user_id }}">Uložit</button>
-                            </td>
-                        </tr>
+    <div class="right-section">
+        <h2>Prehled uzivatelu</h2>
+        <table>
+            <tr>
+                <th>ID uzivatele</th>
+                <th>Prijmeni</th>
+                <th>Jmeno</th>
+                <th>Role</th>
+                <th>Upravit</th>
+            </tr>
+            {% for uzivatel in uzivatele %}
+            <tr>
+                <td>{{ uzivatel.user_id }}</td>
+                <td>{{ uzivatel.prijmeni }}</td>
+                <td>{{ uzivatel.jmeno }}</td>
+                <td>
+                    <select name="role_select">
+                        <option value="" {% if not uzivatel.nazev_role %}selected{% endif %}>Vyberte roli</option>
+                        {% for prvek in role %}
+                        <option value="{{ prvek.role_id }}" {% if prvek.nazev==uzivatel.nazev_role %}selected{% endif
+                            %}>{{ prvek.nazev }}</option>
                         {% endfor %}
-                    </table>
-            </div>
-        </form>
-    </main>
-</body>
-
-</html>
+                    </select>
+                </td>
+                <td>
+                    <button type="submit" name="submit_button" value="{{ uzivatel.user_id }}">Uložit</button>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+{% endblock %}
