--- a/app/templates/html/objednani.html
+++ b/app/templates/html/objednani.html
@@ -1,107 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'html/kategorie.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/style.css" type="text/css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Kategorie</title>
-</head>
+{% block title %}
+{% if restaurace == None %}
+Objednání
+{% else %}
+{{ restaurace.nazev }}
+{% endif %}
+{% endblock %}
 
-<body>
-    <header>
-        <div id="logo">
-            <a href="{{url_for('index')}}">
-                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
-            </a>
-        </div>
-        <div id="header_buttons">
-            <button>
-                <div class="column">
-                    <span class="button-text">Napiste nam</span>
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">mail</span>
-                </div>
-            </button>
-            <button>
-                <div class="column">
-                    <span class="button-text">Prihlaseni</span><!--vlozit odkaz na prihlaseni.html-->
-                    <span class="button-subtext">Registrace</span><!--vlozit odkaz na registrace.html-->
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">
-                        account_circle
-                    </span>
-                </div>
-            </button>
-        </div>
-    </header>
-    <main>
-        <div id="categories">
-            <a href="{{url_for('index', kategorie_id=1)}}">Česká kuchyně</a>
-            <a href="{{url_for('index', kategorie_id=2)}}">Americká kuchyně</a>
-            <a href="{{url_for('index', kategorie_id=3)}}">Asijská kuchyně</a>
-            <a href="{{url_for('index', kategorie_id=4)}}">Vegetariánská kuchyně</a>
-            <a href="{{url_for('index', kategorie_id=5)}}">Streetfood</a>
-            <a href="{{url_for('index', kategorie_id=6)}}">Turecká kuchyně</a>
-        </div>
-        <div id="restaurantTitle">
-            {% if restaurace == None %}
-            <h2>Zvolte si prvni restauraci</h2>
-            {% else %}
-            <h2>{{restaurace.nazev}}</h2>
-            {% endif %}
-        </div>
-        {% if restaurace != None %}
-        <a href="?restaurace_id={{ restaurace.restaurace_id }}"
-            class="{{ 'active' if show_unavailable else '' }}">Zobrazit dostupne</a> |
-        <a href="?restaurace_id={{ restaurace.restaurace_id }}&limited=true"
-            class="{{ 'active' if show_limited else '' }}">Limited</a>
+{% block main %}
+<div id="restaurantTitle">
+    {% if restaurace == None %}
+    <h2>Zvolte si prvni restauraci</h2>
+    {% else %}
+    <h2>{{restaurace.nazev}}</h2>
+    {% endif %}
+</div>
+{% if restaurace != None %}
+<a href="?restaurace_id={{ restaurace.restaurace_id }}" class="{{ 'active' if show_unavailable else '' }}">Zobrazit
+    dostupne</a> |
+<a href="?restaurace_id={{ restaurace.restaurace_id }}&limited=true"
+    class="{{ 'active' if show_limited else '' }}">Limited</a>
 
-        <table class="objednani">
-            <tr>
-                <th>Název jídla</th>
-                <th>Popis</th>
-                <th>Cena</th>
-                <th>Kategorie</th>
-            </tr>
-            {% for produkt in produkty %}
-            <tr>
-                <td>{{produkt.nazev}}</td>
-                <td>{{produkt.popis}}</td>
-                <td>{{produkt.cena}}</td>
-                <td class="quantity-input">
-                    <div class="quantity-btn" onclick="decreaseQuantity(this)">-</div>
-                    <div class="quantity-value" contenteditable="true">0</div>
-                    <div class="quantity-btn" onclick="increaseQuantity(this)">+</div>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
-        <button class="order-btn">Objednat</button>
-        {% endif %}
-    </main>
+<table class="objednani">
+    <tr>
+        <th>Název jídla</th>
+        <th>Popis</th>
+        <th>Cena</th>
+        <th>Kategorie</th>
+    </tr>
+    {% for produkt in produkty %}
+    <tr>
+        <td>{{produkt.nazev}}</td>
+        <td>{{produkt.popis}}</td>
+        <td>{{produkt.cena}}</td>
+        <td class="quantity-input">
+            <div class="quantity-btn" onclick="decreaseQuantity(this)">-</div>
+            <div class="quantity-value" contenteditable="true">0</div>
+            <div class="quantity-btn" onclick="increaseQuantity(this)">+</div>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+<button class="order-btn">Objednat</button>
+{% endif %}
+{% endblock %}
 
+{% block script %}
+<script>
+    function increaseQuantity(element) {
+        var quantityElement = element.parentNode.querySelector('.quantity-value');
+        var quantity = parseInt(quantityElement.innerText, 10);
+        quantityElement.innerText = quantity + 1;
+    }
 
-    <script>
-        function increaseQuantity(element) {
-            var quantityElement = element.parentNode.querySelector('.quantity-value');
-            var quantity = parseInt(quantityElement.innerText, 10);
-            quantityElement.innerText = quantity + 1;
+    function decreaseQuantity(element) {
+        var quantityElement = element.parentNode.querySelector('.quantity-value');
+        var quantity = parseInt(quantityElement.innerText, 10);
+        if (quantity > 0) {
+            quantityElement.innerText = quantity - 1;
         }
-
-        function decreaseQuantity(element) {
-            var quantityElement = element.parentNode.querySelector('.quantity-value');
-            var quantity = parseInt(quantityElement.innerText, 10);
-            if (quantity > 0) {
-                quantityElement.innerText = quantity - 1;
-            }
-        }
-    </script>
-</body>
-
-</html>
+    }
+</script>
+{% endblock %}
