pridane odkazy + logo

--- a/app/templates/html/menu/platebniudaje.html
+++ b/app/templates/html/menu/platebniudaje.html
@@ -6,12 +6,12 @@ Platební údaje
 <div class="container">
     <div class="left-section">
         <nav>
-            <a href="#">Osobní údaje</a>
-            <a href="#">Objednávky</a>
-            <a href="#">Platební údaje</a>
-            <a href="#">Výběr objednávek</a>
-            <a href="#">Statistika</a>
-            <a href="#">Uživatelé</a>
+            <a href="{{url_for('view_profil_page')}}">Osobní údaje</a>
+            <a href="{{url_for('view_objednavka_page')}}">Objednávky</a>
+            <a href="{{url_for('view_udaje_page')}}">Platební údaje</a>
+            <a href="{{url_for('view_vyber_page')}}">Výběr objednávek</a>
+            <a href="{{url_for('view_statistika_page')}}">Statistika</a>
+            <a href="{{url_for('view_prehled_uzivatelu_page')}}">Uživatelé</a>
         </nav>
     </div>
 
