--- a/app/templates/html/neprihlaseny_header.html
+++ b/app/templates/html/neprihlaseny_header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../static/css/style.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" href="../../static/img/logo.png" type="image/png">
     <title>{% block title %}{% endblock %}</title>
 </head>
 
@@ -15,7 +16,7 @@
     <header>
         <div id="logo">
             <a href="{{url_for('index')}}">
-                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+                <img src="../../static/img/logo.png" alt="Logo společnosti" width="64" height="64">
             </a>
         </div>
         <div id="header_buttons">
@@ -44,11 +45,11 @@
         {% block kategorie %}
 
         {% endblock %}
-    
-    
-    
+
+
+
         {% block main %}
-    
+
         {% endblock %}
     </main>
 </body>
