--- a/app/templates/html/prihlaseny_header.html
+++ b/app/templates/html/prihlaseny_header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../static/css/style.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" href="../../static/img/logo.png" type="image/png">
     <title>{% block title %}{% endblock %}</title>
 </head>
 
@@ -16,7 +17,7 @@
     <header>
         <div id="logo">
             <a href="{{url_for('index')}}">
-                <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
+                <img src="../../static/img/logo.png" alt="Logo společnosti" width="64" height="64">
             </a>
         </div>
         <div id="header_buttons">
@@ -28,17 +29,19 @@
                     <span class="material-symbols-outlined">mail</span>
                 </div>
             </button>
-            <button>
-                <div class="column">
-                    <span class="button-text">JMENO
-                        UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
-                </div>
-                <div class="column">
-                    <span class="material-symbols-outlined">
-                        settings
-                    </span>
-                </div>
-            </button>
+            <a href="{{url_for('view_profil_page')}}"  class="profile-link">
+                <button>
+                    <div class="column">
+                        <span class="button-text">JMENO
+                            UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
+                    </div>
+                    <div class="column">
+                        <span class="material-symbols-outlined">
+                            settings
+                        </span>
+                    </div>
+                </button>
+            </a>
         </div>
     </header>
     <main>
