--- a/app/templates/html/produkty.html
+++ b/app/templates/html/produkty.html
@@ -35,7 +35,7 @@
         <div id="cards-container">
             {% for produkt in produkty %}
             <div class="card">
-                <img src="restaurant_image.jpg">
+                <img src="{{ produkt.obrazek }}">
                 <a href="{{url_for('view_objednat_page', restaurace_id=restaurace.restaurace_id)}}">
                     <div class="card-description">
                         <h3>{{ produkt.nazev }}</h3>
