mensi pokrok v registraci, ale stale nefunguje

--- a/app/templates/html/neprihlaseny_header.html
+++ b/app/templates/html/neprihlaseny_header.html
@@ -22,7 +22,7 @@
         <div id="header_buttons">
             <button>
                 <div class="column">
-                    <span class="button-text">Napiste nam</span>
+                    <a href="{{url_for('napistenam')}}" span class="button-text">Napiste nam</a>
                 </div>
                 <div class="column">
                     <span class="material-symbols-outlined">mail</span>
@@ -30,7 +30,7 @@
             </button>
             <button>
                 <div class="column">
-                    <span class="button-text">Prihlaseni</span><!--vlozit odkaz na prihlaseni.html-->
+                    <a href="{{url_for('prihlaseni')}}" class="button-text">Přihlášení</a>
                     <span class="button-subtext">Registrace</span><!--vlozit odkaz na registrace.html-->
                 </div>
                 <div class="column">
