--- a/app/templates/html/prihlaseny_header.html
+++ b/app/templates/html/prihlaseny_header.html
@@ -29,6 +29,16 @@
                     <span class="material-symbols-outlined">mail</span>
                 </div>
             </button>
+            <a href="{{url_for('view_odhlaseni')}}"  class="profile-link">
+            <button>
+                <div class="column">
+                    <span class="button-text">Odhlásit</span>
+                </div>
+                <div class="column">
+                    <span class="material-symbols-outlined">account_circle</span>
+                </div>
+            </button>
+            </a>
             <a href="{{url_for('view_profil_page')}}"  class="profile-link">
                 <button>
                     <div class="column">
