jmeno prihlaseneho uzivatele se zobrazuje + pridana role zakaznik

--- a/app/templates/html/kategorie.html
+++ b/app/templates/html/kategorie.html
@@ -1,4 +1,4 @@
-{% if user_authenticated %}
+{% if prihlaseny!=None %}
     {% extends '/html/prihlaseny_header.html' %}
 {% else %}
     {% extends '/html/neprihlaseny_header.html' %}
