--- a/app/templates/html/prihlaseny_header.html
+++ b/app/templates/html/prihlaseny_header.html
@@ -42,8 +42,7 @@
             <a href="{{url_for('view_profil_page')}}"  class="profile-link">
                 <button>
                     <div class="column">
-                        <span class="button-text">JMENO
-                            UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
+                        <span class="button-text">{{prihlaseny.jmeno}} {{prihlaseny.prijmeni}}</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
                     </div>
                     <div class="column">
                         <span class="material-symbols-outlined">
