--- a/app/templates/html/menu/prihlaseni.html
+++ b/app/templates/html/menu/prihlaseni.html
@@ -14,7 +14,9 @@
 
         <label for="heslo">Heslo:</label>
         <input type="password" id="heslo" name="heslo" required>
-
+        <a href = "{{url_for('view_registrace')}}">Registrujte se</a>
+        <br>
+        <br>
         <button type="prihlaseni">Přihlásit se</button>
     </form>
 
