--- a/app/templates/html/menu/registrace.html
+++ b/app/templates/html/menu/registrace.html
@@ -18,14 +18,8 @@
         <label for="telefon">Telefonní číslo:</label>
         <input type="tel" id="telefon" name="telefon" required>
 
-        <label for="adresa">Adresa a číslo popisné:</label>
+        <label for="adresa">Adresa:</label>
         <input type="text" id="adresa" name="adresa" required>
-
-        <label for="mesto">Město:</label>
-        <input type="text" id="mesto" name="mesto" required>
-
-        <label for="psc">PSČ:</label>
-        <input type="text" id="psc" name="psc" required>
 
         <label for="heslo">Heslo:</label>
         <input type="password" id="heslo" name="heslo" required>
