vse jede jak ma snad

--- a/app/templates/html/menu/registrace.html
+++ b/app/templates/html/menu/registrace.html
@@ -18,7 +18,7 @@
         <label for="telefon">Telefonní číslo:</label>
         <input type="tel" id="telefon" name="telefon" required>
 
-        <label for="adresa">Adresa:</label>
+        <label for="adresa">Adresa a číslo popisné:</label>
         <input type="text" id="adresa" name="adresa" required>
 
         <label for="heslo">Heslo:</label>
